Add table view playground code

--- a/Playground/Playground/Playground.csproj
+++ b/Playground/Playground/Playground.csproj
@@ -66,5 +66,8 @@
     <EmbeddedResource Update="StackLayoutPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="TableViewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
